Bug 457973 - Dragging item while not in selection mode enters it
Summary: Dragging item while not in selection mode enters it
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: Selection Mode (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-08-16 21:23 UTC by Nate Graham
Modified: 2022-08-27 09:41 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nate Graham 2022-08-16 21:23:19 UTC
Everything KDE from current git master.

STEPS TO REPRODUCE
1. Open Dolphin
2. Start dragging an item such that it passes over the Dolphin window while being dragged

OBSERVED RESULT
Dolphin enters Selection mode.

EXPECTED RESULT
Dolphin doesn't enter selection mode.
Comment 1 Bug Janitor Service 2022-08-26 10:51:39 UTC
A possibly relevant merge request was started @ https://invent.kde.org/system/dolphin/-/merge_requests/439
Comment 2 Felix Ernst 2022-08-27 09:41:11 UTC
Git commit 4ddc4159ed5d9fb6e7b7c6edc1b04460f87c984b by Felix Ernst.
Committed on 27/08/2022 at 09:40.
Pushed by felixernst into branch 'master'.

This commit removes the ability to enter selection mode by
click-and-holding with a pointing device like a mouse.

This functionality was originally implemented because it seemed
useful to save users the effort of entering selection mode
explicitly by using its corresponding action.

However, click-and-holding to trigger anything is not really an
expected behaviour. (This contrasts with touch devices where
press-and-holding is common to trigger something.)

Aside from the above reasoning, the click-and-hold behaviour was
also buggy so that selection mode was entered in a couple of
situations that weren't strictly about click-and-holding.

So this commit removes the functionality and the bugs.
Related: bug 458129, bug 457975

M  +0    -1    src/kitemviews/kitemlistcontroller.cpp

https://invent.kde.org/system/dolphin/commit/4ddc4159ed5d9fb6e7b7c6edc1b04460f87c984b